--- a/rainyshinycloudy/Base.lproj/Main.storyboard
+++ b/rainyshinycloudy/Base.lproj/Main.storyboard
@@ -82,14 +82,14 @@
                                 <rect key="frame" x="0.0" y="300" width="320" height="268"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="weatherCell" rowHeight="80" id="th3-p0-dqH">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="weatherCell" rowHeight="80" id="th3-p0-dqH" customClass="WeatherCell" customModule="rainyshinycloudy" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="320" height="80"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="th3-p0-dqH" id="KxU-8e-HRt">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="79"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="AWe-hX-IjU">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="AWe-hX-IjU">
                                                     <rect key="frame" x="16" y="18" width="50" height="50"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="50" id="D1e-V8-MKZ"/>
@@ -150,6 +150,13 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                        <connections>
+                                            <outlet property="dayLabel" destination="Atz-wW-ox9" id="EbE-7h-cxo"/>
+                                            <outlet property="highTemp" destination="c3c-FW-PDa" id="j9c-5K-14g"/>
+                                            <outlet property="lowTemp" destination="8nb-l3-Pnl" id="QGu-QH-Z2V"/>
+                                            <outlet property="weatherIcon" destination="AWe-hX-IjU" id="DUF-Dm-YRm"/>
+                                            <outlet property="weatherType" destination="sZZ-6h-qlK" id="1lK-xs-W3c"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
